@@ -17,6 +17,7 @@ solutionConcentration=<html><center>Solution<br>Concentration<br>(Molarity)</htm
 solutionVolume=<html><center>Solution<br>Volume<br>(Liters)</html>
 units.liters=L
 units.molarity=M
+units.moles=mol
 zero=zero
 
 # Solutes
